# ytmusic

./: jobs.json  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: binary_manager.rs  downloader.rs  mod.rs
src/components/: BinaryManager.tsx  DownloadItemComponent.tsx  DownloadQueue.tsx  PlaylistDialog.tsx  TitleBar.tsx  UrlInput.tsx
src/i18n/: I18nContext.tsx  index.ts
src/types/: index.ts
