[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", features = ["stream"] }
tokio = { version = "1.52.3", features = ["full"] }
futures-util = "0.3.32"
zip = "8.6.0"
flate2 = "1.1.9"
tar = "0.4.46"
dirs = "6.0.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
xz2 = "0.1.7"

